# Listing files to compile
sources = files (
    'Application.vala',

    'screens/MainView.vala',
    'screens/pixelView.vala',
    'screens/itenrView.vala',
    'screens/motoView.vala',
    'screens/iseView.vala',
    'screens/AnotherMainView.vala',

    'widgets/headerbar.vala',
    'widgets/maingrid.vala',
    'widgets/horizontalbox.vala',
    'widgets/labelbutton.vala',
    'widgets/urlentry.vala',

    'services/urigen.vala',
    'services/useragents.vala'
)
