# Listing files to compile
sources = files (
    'Application.vala',
    'MainWindow.vala',

    'screens/iseView.vala',
    'screens/AnotherMainView.vala',

    'widgets/headerbar.vala',
    'widgets/maingrid.vala',
    'widgets/horizontalbox.vala',
    'widgets/labelbutton.vala',
    'widgets/urlentry.vala',
    'widgets/infobutton.vala',
    'widgets/popbutton.vala',

    'services/urigen.vala',
    'services/useragents.vala',

    'dialogs/aboutdialog.vala',
    'dialogs/emptyurlalert.vala'
)
