# Listing files to compile
sources = files (
    'Application.vala',
    'MainWindow.vala',

    'Dialogs/AboutDialog.vala',
    'Dialogs/EmptyUrlAlert.vala',

    'Screens/AnotherMainView.vala',
    'Screens/IseView.vala',

    'Services/Resize.vala',
    'Services/SizeChart.vala',
    'Services/UriGen.vala',
    'Services/UserAgents.vala',

    'Widgets/HeaderBar.vala',
    'Widgets/HorizontalBox.vala',
    'Widgets/InfoButton.vala',
    'Widgets/LabelButton.vala',
    'Widgets/MainGrid.vala',
    'Widgets/UrlEntry.vala'
)
